# mentor-that-knows

./: .gitignore  README.md  pyproject.toml  submission_gemini_single.md  submission_sample.md
src/mentor_that_knows/: __init__.py  agents.py  cli.py  course.py  dsl.py  orchestrator.py
tests/: test_course.py  test_dsl.py
